Conversion des horodate de eau et temperature en datetime

--- a/Nettoyage_channels.ipynb
+++ b/Nettoyage_channels.ipynb
@@ -6,19 +6,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-18T18:42:11.940571200Z",
-     "start_time": "2025-12-18T18:42:11.893728200Z"
+     "end_time": "2025-12-18T19:15:10.750770700Z",
+     "start_time": "2025-12-18T19:15:10.503877300Z"
     }
    },
    "source": "import pandas as pd",
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-18T18:47:54.379453Z",
-     "start_time": "2025-12-18T18:47:54.284182800Z"
+     "end_time": "2025-12-18T19:15:20.109099Z",
+     "start_time": "2025-12-18T19:15:20.016972600Z"
     }
    },
    "cell_type": "code",
@@ -54,13 +54,13 @@
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-18T18:47:57.062023200Z",
-     "start_time": "2025-12-18T18:47:56.903580500Z"
+     "end_time": "2025-12-18T19:15:21.871623900Z",
+     "start_time": "2025-12-18T19:15:21.752878100Z"
     }
    },
    "cell_type": "code",
@@ -243,18 +243,18 @@
        "</div>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 70
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-18T18:48:04.159797100Z",
-     "start_time": "2025-12-18T18:48:04.126309900Z"
+     "end_time": "2025-12-18T19:15:24.676398500Z",
+     "start_time": "2025-12-18T19:15:24.554806900Z"
     }
    },
    "cell_type": "code",
@@ -267,14 +267,178 @@
     "df_cleaned"
    ],
    "id": "d276634886dd1c71",
-   "outputs": [],
-   "execution_count": 71
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows after filtering for last update after 2023-04-01: 674\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "     channel_id channel_provider_id mobility_type  time_step  \\\n",
+       "6     353480095           353480095          BIKE        900   \n",
+       "8     353480097           353480097          BIKE        900   \n",
+       "11    102017788           102017788          BIKE       3600   \n",
+       "20    353246254           353246254          BIKE       3600   \n",
+       "22    353246258           353246258          BIKE       3600   \n",
+       "...         ...                 ...           ...        ...   \n",
+       "1275  353500826           353500826          BIKE       3600   \n",
+       "1276  353500827           353500827          BIKE       3600   \n",
+       "1279  353506887           353506887          BIKE       3600   \n",
+       "1280  353506888           353506888          BIKE       3600   \n",
+       "1288  353642895           353642895          BIKE       3600   \n",
+       "\n",
+       "               last_updated_at  \n",
+       "6    2024-10-18 16:00:00+00:00  \n",
+       "8    2024-10-18 16:00:00+00:00  \n",
+       "11   2025-12-17 23:00:00+00:00  \n",
+       "20   2024-10-06 22:00:00+00:00  \n",
+       "22   2024-10-06 22:00:00+00:00  \n",
+       "...                        ...  \n",
+       "1275 2025-01-23 08:45:00+00:00  \n",
+       "1276 2025-01-23 08:45:00+00:00  \n",
+       "1279 2025-11-17 12:00:00+00:00  \n",
+       "1280 2025-11-17 12:00:00+00:00  \n",
+       "1288 2025-12-17 23:00:00+00:00  \n",
+       "\n",
+       "[619 rows x 5 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>channel_id</th>\n",
+       "      <th>channel_provider_id</th>\n",
+       "      <th>mobility_type</th>\n",
+       "      <th>time_step</th>\n",
+       "      <th>last_updated_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>353480095</td>\n",
+       "      <td>353480095</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>900</td>\n",
+       "      <td>2024-10-18 16:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>353480097</td>\n",
+       "      <td>353480097</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>900</td>\n",
+       "      <td>2024-10-18 16:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>102017788</td>\n",
+       "      <td>102017788</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>2025-12-17 23:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>353246254</td>\n",
+       "      <td>353246254</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>2024-10-06 22:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>353246258</td>\n",
+       "      <td>353246258</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>2024-10-06 22:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1275</th>\n",
+       "      <td>353500826</td>\n",
+       "      <td>353500826</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>2025-01-23 08:45:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1276</th>\n",
+       "      <td>353500827</td>\n",
+       "      <td>353500827</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>2025-01-23 08:45:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1279</th>\n",
+       "      <td>353506887</td>\n",
+       "      <td>353506887</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>2025-11-17 12:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1280</th>\n",
+       "      <td>353506888</td>\n",
+       "      <td>353506888</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>2025-11-17 12:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1288</th>\n",
+       "      <td>353642895</td>\n",
+       "      <td>353642895</td>\n",
+       "      <td>BIKE</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>2025-12-17 23:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>619 rows × 5 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-18T18:48:12.098590700Z",
-     "start_time": "2025-12-18T18:48:12.040795400Z"
+     "end_time": "2025-12-18T19:15:27.355865300Z",
+     "start_time": "2025-12-18T19:15:27.236000900Z"
     }
    },
    "cell_type": "code",
@@ -458,12 +622,12 @@
        "</div>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 73
+   "execution_count": 5
   },
   {
    "metadata": {
