pré-traitement comptage caluire

--- a/conversion_date.ipynb
+++ b/conversion_date.ipynb
@@ -23,9 +23,9 @@
    },
    "cell_type": "code",
    "source": [
-    "def convert_date_columns(df, date_columns):\n",
+    "def convert_date_columns(df, date_columns, utc_bool=False):\n",
     "    for col in date_columns:\n",
-    "        df[col] = pd.to_datetime(df[col], utc=False, errors='coerce', dayfirst=True)\n",
+    "        df[col] = pd.to_datetime(df[col], utc=utc_bool, errors='coerce', dayfirst=True)\n",
     "        df[col] = df[col].dt.tz_localize('Europe/Paris')\n",
     "    return df"
    ],
